--- a/README.Rmd
+++ b/README.Rmd
@@ -22,7 +22,10 @@ knitr::opts_chunk$set(
 
 This package provides a set of functions useful in the analysis of 3D genomic interactions.
 It includes the import of standard HiC data formats into R and HiC normalisation procedures.
-The main objective of this package is to improve the visualization and quantification of the analysis of HiC contacts through aggreagtion.
+The main objective of this package is to improve the visualization and quantification of the analysis of HiC contacts through aggregation.
+
+
+(man/figues/pkgPresentation.png)
 
 
 ## Installation
