add summary plot try 2

--- a/README.Rmd
+++ b/README.Rmd
@@ -24,7 +24,7 @@ This package provides a set of functions useful in the analysis of 3D genomic in
 It includes the import of standard HiC data formats into R and HiC normalisation procedures.
 The main objective of this package is to improve the visualization and quantification of the analysis of HiC contacts through aggregation.
 
-<img src="man/figues/pkgPresentation.png"/>
+![](man/figues/pkgPresentation.png)
 
 ## Installation
 
