--- a/README.Rmd
+++ b/README.Rmd
@@ -24,7 +24,8 @@ This package provides a set of functions useful in the analysis of 3D genomic in
 It includes the import of standard HiC data formats into R and HiC normalisation procedures.
 The main objective of this package is to improve the visualization and quantification of the analysis of HiC contacts through aggregation.
 
-![pkgPresentation](man/figues/pkgPresentation.png)
+<img src='man/figures/pkgPresentation.png' />
+
 
 ## Installation
 
